--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-py4j==0.10.9
-pyspark==3.0.1
-numpy==1.20.1
-pandas==1.2.2
-python-dateutil==2.8.1
-pytz==2021.1
+boto3==1.9.249
+botocore==1.12.249
+docutils==0.15.2
+jmespath==0.9.4
+python-dateutil==2.8.0
+s3transfer==0.2.1
+six==1.12.0
+urllib3==1.25.6
